--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
             <input type="file" id="csv-file" accept=".csv" />
             <button id="load-btn" class="load-btn">Load Charts</button>
         </div>
+        <div class="search-container" id="search-container" style="display: none;">
+            <label for="search-input" class="search-label">Search by Aggregation Key:</label>
+            <input type="text" id="search-input" class="search-input" placeholder="e.g., mazda_3, chery_tiggo-8..." />
+            <span id="result-count" class="result-count"></span>
+        </div>
         <div id="loading" style="display: none;">Loading data...</div>
         <div id="charts-container" class="trellis-grid"></div>
     </div>
